// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. article list 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "maxWidth": 660,
            }
          }
        >
          <Link>
            <View
              style={
                Object {
                  "paddingHorizontal": 10,
                  "paddingVertical": 10,
                }
              }
            >
              <Card>
                <ArticleSummary />
              </Card>
            </View>
          </Link>
        </View>
      </View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
            "paddingHorizontal": 10,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "flex": 1,
              "height": 1,
              "maxWidth": 660,
            }
          }
        />
      </View>
    </View>
    <View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "maxWidth": 660,
            }
          }
        >
          <Link>
            <View
              style={
                Object {
                  "paddingHorizontal": 10,
                  "paddingVertical": 10,
                }
              }
            >
              <Card>
                <ArticleSummary />
              </Card>
            </View>
          </Link>
        </View>
      </View>
    </View>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "flex": 1,
              "height": 1,
              "maxWidth": 660,
            }
          }
        />
        <ActivityIndicator
          style={
            Object {
              "paddingVertical": 25,
            }
          }
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`2. article list with no images 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "maxWidth": 660,
            }
          }
        >
          <Link>
            <View
              style={
                Object {
                  "paddingHorizontal": 10,
                  "paddingVertical": 10,
                }
              }
            >
              <Card>
                <ArticleSummary />
              </Card>
            </View>
          </Link>
        </View>
      </View>
    </View>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "flex": 1,
              "height": 1,
              "maxWidth": 660,
            }
          }
        />
        <ActivityIndicator
          style={
            Object {
              "paddingVertical": 25,
            }
          }
        />
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`3. a retry button when load more fails 1`] = `
<RCTScrollView>
  <View>
    <View>
      <View
        style={
          Object {
            "flexDirection": "row",
            "justifyContent": "center",
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
              "maxWidth": 660,
            }
          }
        >
          <Link>
            <View
              style={
                Object {
                  "paddingHorizontal": 10,
                  "paddingVertical": 10,
                }
              }
            >
              <Card>
                <ArticleSummary />
              </Card>
            </View>
          </Link>
        </View>
      </View>
    </View>
    <View>
      <View>
        <View
          style={
            Object {
              "backgroundColor": "#DBDBDB",
              "flex": 1,
              "height": 1,
              "maxWidth": 660,
            }
          }
        />
        <View
          style={
            Object {
              "alignSelf": "center",
              "padding": 25,
              "width": "100%",
            }
          }
        >
          <Button />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
